[package]
name = "aiohttp_tokio"
version = "0.0.1"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]

[dependencies]
boxfnonce = "*"
log = "0.3"
env_logger = "*"
net2 = "0.2"
libc = "0.2"
lazy_static = "0.2"
bytes = "0.4"
futures = "*"
tokio-core = "*"
tokio-io = "*"

#tokio-signal = "*"
tokio-signal = { git = "https://github.com/alexcrichton/tokio-signal.git" }

#tokio-core = { git = "https://github.com/tokio-rs/tokio-core.git" }
#tokio-io = { git = "https://github.com/tokio-rs/tokio-io" }

[dependencies.async-tokio]
path = "../async-tokio"
#git = "https://github.com/PyO3/async-tokio.git"
default-features = false

[dependencies.cpython]
git = "https://github.com/PyO3/rust-cpython.git"
#path = "../tokio/rust-cpython"
default-features = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3
